--- a/src/app/bookcreate/bookcreate.component.html
+++ b/src/app/bookcreate/bookcreate.component.html
@@ -1,7 +1,15 @@
-<div class="row justify-content-md-center" *ngIf="autorElegido==null">
-    <div class="col align-center">
-    Elige un autor por favor
-    </div>
+<div class="container align-center">
+<div class="row justify-content-md-center text-center pt-5" *ngIf="autorElegido==null">
+    <div class="col-12 alert alert-warning" id="editordelibro" role="alert">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
+          </svg>
+          Selecciona un autor para crear un libro
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
+          </svg>
+      </div>
+</div>
 </div>
 
 <div class="container align-center" *ngIf="autorElegido!=null">
