--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -18,7 +18,7 @@
                 <div class="row">
                     <div class="col py-1" id="intro">
                         <br>
-                        <p>Prest-a-Book es una aplicación para el préstamos de libros que fomenta la lectura y el compañerismo entre personas con dicho hobby.</p>
+                        <p>Prest-a-Book es una aplicación para el préstamo de libros que fomenta la lectura y el compañerismo entre personas con dicho hobby.</p>
                         <p>Este proyecto es posible gracias a 
                         <a href="https://www.t-systems.com/es/es">T-System</a>, 
                         <a href="https://cambrareus.org/">Cambra Reus</a>,
