--- a/src/app/adminpanel-loans/adminpanel-loans.component.html
+++ b/src/app/adminpanel-loans/adminpanel-loans.component.html
@@ -19,7 +19,7 @@
                         <td class="col text-center">{{prestamo?.id_book.title}}</td>
                         <td class="col text-center">{{prestamo?.id_loaner.username}}</td>
                         <td class="col text-center">{{prestamo?.id_loanee.username}}</td>
-                        <td class="col text-center"><button class="btn btn-danger" (click)="borrarPrestamo(prestamo?.id)">
+                        <td class="col text-center"><button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#DeleteLoan" (click)="borrarPrestamo(prestamo?.id)">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                             <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
                             <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
@@ -28,8 +28,38 @@
                     </tr>
                 </tbody>
             </table>
-            <!-- <mat-paginator [pageSizeOptions]="[5, 25, 50]">
-            </mat-paginator> -->
+            <div class="modal fade" id="DeleteLoan" tabindex="-1" role="dialog" aria-labelledby="DeleteLoan" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Aviso</h5>
+                        </div>
+                        <div class="modal-body">
+                            {{mensaje}}
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#DeleteLoanDef" (click)="borradoDefinitivo()">Borrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="DeleteLoanDef" tabindex="-1" role="dialog" aria-labelledby="DeleteLoanDef" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Borrado completadp</h5>
+                        </div>
+                        <div class="modal-body">
+                            {{mensaje}}
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-success" data-bs-dismiss="modal">Aceptar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
