--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,6 +1,13 @@
 <body class="bg-custom-yellow p-1 purebackground background-image-center fontcabecera" id="all-page-height">
     <div class="container my-5">
-        <div class="row mb-4 bg-custom-orange p-4 rounded-2">
+        <ng-container *ngIf="isFetching">
+            <div class="d-flex justify-content-center">
+                <div class="spinner-border" role="status">
+                    <span class="sr-only"></span>
+                </div>
+            </div>
+        </ng-container>
+        <div class="row mb-4 bg-custom-orange p-4 rounded-2" *ngIf="!isFetching">
             <div class="col-md-4">
                 <img src="{{book?.img}}" alt="" class="img-fluid ">
             </div>
