--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -21,7 +21,7 @@
                         <path
                             d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
                     </svg></a>
-                <a href="/bookcreate" class="nav-item nav-link color-custom-blue2 mx-1">Publicar <svg
+                <a href="/bookcreate" class="nav-item nav-link color-custom-blue2 mx-1" *ngIf="rol != 0">Publicar <svg
                         xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" fill="currentColor"
                         class="bi bi-plus-lg" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
@@ -35,7 +35,7 @@
                     </svg></a>
             </div>
             <div class="navbar-nav ms-auto" *ngIf="!isLoged && !imInLoginRegister">
-                <a href="/login-register" class="nav-item nav-link color-custom-blue2">Register</a>
+                <a href="/login-register?register=true" class="nav-item nav-link color-custom-blue2">Register</a>
                 <a href="/login-register" class="nav-item nav-link color-custom-blue2">Login</a>
             </div>
             <div class="navbar-nav ms-auto" *ngIf="isLoged">
