--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,7 +1,7 @@
 <body class="bg-custom-yellow fontcabecera">
 	<div id="bienvenido" class="container-fluid p-4 text-white text-center">
-		<div class="row pt-4">
-			<div class="col-lg-4 fs-1 align-self-center fw-bolder"><img src="assets/Logoprestabook.png" alt="Prest-A-Book"></div>
+		<div class="row pt-5">
+			<div class="col-lg-5 fs-1 align-self-center fw-bolder"><img src="assets/Logoprestabook.png" alt="Prest-A-Book"></div>
 		</div>
 		<div class="row">
 			<div class="col-lg-5 mt-5 fs-1 align-self-center fw-bolder color-custom-blue">Bienvenido a Prest-a-book</div>
@@ -10,8 +10,11 @@
 	
 	<div class="container-fluid bg-custom-orange px-0" id="containercentral">
 		<div class="container-fluid purebackground p-5">
-			<div class="row pb-5">
+			<div class="row pb-5" *ngIf="!isLoged">
 				<div class="col col-12 fs-5 text-center contentintroImg">¿Buscas libros nuevos que devorar? ¿Quieres intercambiar obras y abrir nuevos mundos a lectores como tú?<br><a href="/login-register" class="color-custom-blue custom-blue-a"><br>¡Regístrate aquí o accede a tu cuenta!</a></div>
+			</div>
+			<div class="row pb-5" *ngIf="isLoged">
+				<div class="col col-12 fs-5 text-center contentintroImg">¿Buscas libros nuevos que devorar? ¿Quieres intercambiar obras y abrir nuevos mundos a lectores como tú?<br><a href="/interface" class="color-custom-blue custom-blue-a"><br>¡Regístrate aquí o accede a tu cuenta!</a></div>
 			</div>
 			<div class="row">
 				<div class="col-12 text-center px-5 py-4 contentintroImg">
@@ -54,14 +57,14 @@
 					<div class="carousel-inner">
 						<div class="carousel-item active">
 							<div class="card-group">
-								<div class="card m-2" routerLink="/book/{{book.id}}" style="width: 18rem;" *ngFor="let book of books | slice:0:3;">
+								<div class="card m-2" routerLink="/book/{{book.id}}" style="width: 20rem;" *ngFor="let book of books | slice:0:3;">
 										<img src="{{book.img}}" class="card-img-top bookimg" alt="{{book.title}}">
 								</div>
 							</div>
 						</div>
 						<div class="carousel-item">
 							<div class="card-group">
-								<div class="card m-2" routerLink="/book/{{book.id}}" style="width: 18rem;" *ngFor="let book of books | slice:3:6;">
+								<div class="card m-2" routerLink="/book/{{book.id}}" style="width: 20rem;" *ngFor="let book of books | slice:3:6;">
 										<img src="{{book.img}}" class="card-img-top bookimg" alt="{{book.title}}">
 								</div>
 							</div>
@@ -81,7 +84,8 @@
 				</div>
 				<div class="col-6 text-center contentintroImg">
 					<span class="fs-2 fw-bold">¿Quieres prestar libros que no usas?</span><br>
-					<a class="color-custom-blue custom-blue-a fs-3" href="/login-register">Inicia sesión y comienza a compartir --></a>
+					<a class="color-custom-blue custom-blue-a fs-3" href="/login-register" *ngIf="!isLoged">Inicia sesión y comienza a compartir --></a>
+					<a class="color-custom-blue custom-blue-a fs-3" href="/interface" *ngIf="isLoged">Inicia sesión y comienza a compartir --></a>
 				</div>
 			</div>
 		</div>
